Fixed spelling mistake

--- a/Projet/index.html
+++ b/Projet/index.html
@@ -68,7 +68,7 @@
 
         <div class="section-title">
           <span>A propos de moi</span>
-          <h2>A promos de moi</h2>
+          <h2>A propos de moi</h2>
           <p>Étudiant en école d'ingénieurs dans les Hauts-de-France passionné par l'informatique cherche toujours à découvrir de nouvelles choses.</p>
         </div>
 
