Fixed projects option in menu

--- a/Projet/index.html
+++ b/Projet/index.html
@@ -44,7 +44,7 @@
         <li class="active"><a href="index.html">Accueil</a></li>
         <li><a href="#aPropos">A propos de moi</a></li>
 		<li><a href="#competences">Compétences</a></li>
-        <li><a href="#experiences">Projets</a></li>
+        <li><a href="#projets">Projets</a></li>
 
       </ul>
     </nav><!-- .nav-menu -->
